# bb-vulkan-engine

./: .gitmodules  CMakeLists.txt  README.md
include/: bb-engine.h  bb-renderer-core.h
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: CMakeLists.txt  Main.cpp  bve_buffer_vertex.cpp  bve_command_buffers.cpp  bve_command_buffers.hpp  bve_device.cpp  bve_device.hpp  bve_draw_frame.cpp  bve_draw_frame.hpp  bve_model.cpp  bve_model.hpp  bve_pipeline.cpp  bve_pipeline.hpp  bve_swap_chain.cpp  bve_swap_chain.hpp  bve_window.cpp  bve_window.hpp  config_command_buffers.cpp  config_device.cpp  config_device.hpp  config_pipeline.cpp  config_pipeline.hpp  first_app.cpp  first_app.hpp
src/configs/command_buffers/: renderPassInfo.conf
src/configs/device/: appInfo.conf  bufferCreateInfo.conf  commandBufferAllocInfo.conf  createInfo.conf  memoryAllocateInfo.conf  poolInfo.conf  queueCreateInfo.conf
src/configs/pipeline/: pipelineConfigDefault.conf  pipelineCreateInfo.conf  pipelineLayoutInfo.conf
src/engine/: buffers.cpp  buffers.hpp  bve_buffer_vertex.cpp  bve_buffer_vertex.hpp  bve_buffers.cpp  bve_buffers.hpp  bve_cleanup.cpp  bve_cleanup.hpp  bve_command_buffers.cpp  bve_command_buffers.hpp  bve_defines.hpp  bve_device.cpp  bve_device.hpp  bve_draw_frame.cpp  bve_draw_frame.hpp  bve_fileIO.cpp  bve_fileIO.hpp  bve_model.cpp  bve_model.hpp  bve_pipeline.cpp  bve_pipeline.hpp  bve_swap_chain.cpp  bve_swap_chain.hpp  bve_vertex.cpp  bve_window.cpp  bve_window.hpp  cleanup.cpp  cleanup.hpp  command_buffers.cpp  command_buffers.hpp  config_buffers.cpp  config_buffers.hpp  config_command_buffers.cpp  config_command_buffers.hpp  config_device.cpp  config_device.hpp  config_pipeline.cpp  config_pipeline.hpp  config_swap_chain.cpp  config_swap_chain.hpp  (+32 more)
src/testbin/: Main.cpp
